--- a/charts/shieldsio/values.yaml
+++ b/charts/shieldsio/values.yaml
@@ -44,8 +44,8 @@ ingress:
   enabled: true
   className: ""
   annotations:
-    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    # cert-manager.io/cluster-issuer: issuer-le-production
   hosts:
     - host: chart-example.local
       paths:
@@ -73,7 +73,7 @@ autoscaling:
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
