--- a/charts/vaultwarden/Chart.yaml
+++ b/charts/vaultwarden/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: synapse
-description: The reference implementation for a Matrix.org chat server
+name: vaultwarden
+description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -21,19 +21,11 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "v1.92.2"
+appVersion: "1.30.5"
 
-# Additional dependencies
 dependencies:
   - condition: postgresql.enabled
-    name: postgresql
+    alias: postgresql
+    name: postgresql-ha
     repository: https://charts.bitnami.com/bitnami
-    version: ~12.11.0
-  - condition: redis.enabled
-    name: redis
-    repository: https://charts.bitnami.com/bitnami
-    version: ~18.0.0
-  - condition: nginx.enabled
-    name: nginx
-    repository: https://charts.bitnami.com/bitnami
-    version: ~15.2.0
+    version: 14.2.7
