--- a/charts/vaultwarden/templates/service.yaml
+++ b/charts/vaultwarden/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "synapse.fullname" . }}
+  name: {{ include "vaultwarden.fullname" . }}
   labels:
-    {{- include "synapse.labels" . | nindent 4 }}
+    {{- include "vaultwarden.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "synapse.selectorLabels" . | nindent 4 }}
+    {{- include "vaultwarden.selectorLabels" . | nindent 4 }}
