--- a/charts/vaultwarden/templates/deployment.yaml
+++ b/charts/vaultwarden/templates/deployment.yaml
@@ -80,11 +80,13 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       volumes:
+      {{- if .Values.persistence.enabled }}
         - name: data
           persistentVolumeClaim:
             claimName: data-{{ include "vaultwarden.fullname" . }}
-      {{- with .Values.volumes }}
-        {{- toYaml . | nindent 8 }}
+      {{- else }}
+        - name: data
+          emptyDir: {}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
