--- a/charts/mumble/templates/service.yaml
+++ b/charts/mumble/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "mumble.fullname" . }}
   labels:
     {{- include "mumble.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
