--- a/charts/asuniversal/templates/deployment.yaml
+++ b/charts/asuniversal/templates/deployment.yaml
@@ -1,4 +1,5 @@
 {{- $deploymentName := .Values.deploymentName }}
+{{- $fullname := include "asuniversal.fullname" . }}
 {{- if or (eq .Values.deploymentType "Deployment") (eq .Values.deploymentType "StatefulSet") -}}
 {{- $defaultSecurityContext := .Values.containerSecurityContext }}
 {{- $defaultResources := .Values.containerResources }}
@@ -58,7 +59,7 @@ spec:
         {{- range .Values.persistence.claims }}
         - name: {{ .name }}
           persistentVolumeClaim:
-            claimName: {{ .name }}
+            claimName: data-{{ printf "%s-%s" $fullname .name | trimSuffix "-" }}
         {{- end }}
         {{- if .Values.persistence.volumes }}
         {{- toYaml .Values.persistence.volumes | nindent 8 }}
